--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,8 @@
 cmake_minimum_required(VERSION 3.29)
 project(Students_Manager C)
 
+set(CMAKE_C_FLAGS -s)
+
 set(CMAKE_C_STANDARD 11)
 
 add_executable(Students_Manager main.c)
